--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
-    "solc": "^0.8.1"
+    "ganache-cli": "^6.12.2",
+    "ganache-core": "^2.13.2",
+    "jest": "^26.6.3",
+    "solc": "^0.8.1",
+    "web3": "^1.3.4"
+  },
+"jest": {
+    "verbose": false,
+    "moduleDirectories": [
+      "node_modules"
+    ]
   }
 }
