--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
+    "bootstrap": "4.5.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "web3": "^1.3.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.8",
+    "@babel/preset-env": "^7.13.8",
+    "@babel/register": "^7.13.8",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-preset-env": "1.7.0",
     "chai": "^4.3.0",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "3.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0"
   },
