--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cytools/vue-query": "^0.1.0",
     "@openzeppelin/contracts": "^3.4.0",
     "bootstrap": "4.5.2",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "web3": "^1.3.4"
