--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "4.5.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "epic-spinners": "^1.1.0",
     "vue": "^3.0.0",
     "web3": "^1.3.4"
   },
