--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "epic-spinners": "^1.1.0",
     "vue": "^3.0.0",
+    "vue-router": "^4.0.5",
     "web3": "^1.3.4"
   },
   "devDependencies": {
